# global-co2-insight

./: .gitignore  .pre-commit-config.yaml  Dockerfile.api  MODEL_CARD.md  Makefile  README.md  dvc.yaml  profiles.yml  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  ci.yml
api/: dependencies.py  main.py
api/routers/: anomalies.py  forecast.py  health.py  policy.py
api/schemas/: anomaly.py  common.py  forecast.py  policy.py
api/services/: anomaly_service.py  forecast_service.py  policy_service.py
configs/: config.yaml  wandb.yaml
configs/data/: owid_co2.yaml
data/: co2_emissions_kt_by_country_2023.csv
docs/: lineage.md
flows/: co2_pipeline.py
frontend/: app.py
frontend/pages/: 1_Forecast.py
notebooks/: 01_data_eda.ipynb  02_feature_engineering.ipynb
schemas/: bronze_owid_co2.yaml  gold_ml_features.yaml  silver_country_year.yaml
scripts/: train_lstm_ae.py  train_nhits.py
src/: app.py  config.py
src/co2_ml/: config.py
src/co2_ml/models/: anomaly.py  causal.py  forecast.py
src/co2_ml/pipelines/: ingest.py  ingest_paris.py  ingest_worldbank.py  preprocess.py  silver_clean_pandas.py  silver_clean_spark.py
tests/: conftest.py
tests/data/: ge_validation.py  test_ge_validation.py
tests/integration/: test_pipeline_e2e.py
tests/unit/: test_causal.py  test_features.py  test_metrics.py
warehouse/co2_warehouse/models/mart/: mart_ml_features.sql  schema.yml
warehouse/co2_warehouse/models/staging/: schema.yml  sources.yml  stg_co2.sql
warehouse/co2_warehouse/tests/: assert_paris_join_coverage.sql
