[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "co2-ml"
version = "0.1.0"
description = "End-to-end climate ML platform: forecasting, causal inference, anomaly detection"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2.2",
    "numpy>=1.26.4",
    "matplotlib>=3.9.2",
    "seaborn>=0.13.2",
    "streamlit>=1.37.1",
    "plotly>=5.24.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/co2_ml"]

[tool.ruff]
target-version = "py311"
line-length = 120
extend-exclude = ["notebooks/"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"frontend/app.py" = ["E501"]  # HTML strings in Streamlit markdown exceed line length

[tool.ruff.format]
quote-style = "double"

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
