[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "co2-ml"
version = "0.1.0"
description = "End-to-end climate ML platform: forecasting, causal inference, anomaly detection"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2.2",
    "numpy>=1.26.4",
    "matplotlib>=3.9.2",
    "seaborn>=0.13.2",
    "streamlit>=1.37.1",
    "plotly>=5.24.1",
    "neuralforecast>=1.7.5",
    "chronos-forecasting>=1.4.0",
    "torch>=2.4.1",
    "mapie>=0.8.6",
    "dowhy>=0.11.1",
    "econml>=0.15.1",
    "pyfixest>=0.9.0",
    "shap>=0.46.0",
    "scikit-learn>=1.5.2",
    "wandb>=0.18.7",
    "dvc>=3.56.0",
    "hydra-core>=1.3.2",
    "fastapi>=0.115.5",
    "uvicorn>=0.30.0",
    "pydantic>=2.7.0",
    "httpx>=0.28.0",
    "prophet>=1.1.6",
    "wbdata>=1.0.0",
    "statsmodels>=0.14.4",
    "pytest>=8.3.0",
    "great-expectations>=1.2.5",
    "python-dotenv>=1.0.1",
    "tqdm>=4.67.1",
    "omegaconf>=2.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/co2_ml"]

[tool.ruff]
target-version = "py311"
line-length = 120
extend-exclude = ["notebooks/"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"frontend/app.py" = ["E501"]  # HTML strings in Streamlit markdown exceed line length

[tool.ruff.format]
quote-style = "double"

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
